--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import '../src/styles/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;1,500&display=swap');
+
 *,
 *::before,
 *::after {
@@ -11,8 +14,14 @@ html {
 }
 
 body {
+  background-color: var(--dark);
   font-size: 1.6rem;
-  font-family: sans-serif;
+  font-family: 'poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
