--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -2,4 +2,49 @@
   height: 100vh;
   width: 100vw;
   background-color: var(--dark);
+  position: relative;
+
+  &__blue {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    background: var(--sec);
+    width: 60rem;
+    height: 60rem;
+    transform: translateY(-50%);
+    opacity: 0.3;
+  }
+
+  &__grey {
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    background-color: var(--light);
+    width: 40rem;
+    transform: translateY(-50%);
+    padding: 5rem;
+
+    & h1 {
+      color: var(--ter);
+    }
+
+    & sub {
+      color: var(--sec);
+      font-weight: 600;
+    }
+
+    & p {
+      padding-top: 3rem;
+    }
+
+    & button {
+      padding: 1rem 2.2rem;
+      background-color: var(--pri);
+      border: none;
+      outline: none;
+      color: var(--light);
+      border-radius: 5rem;
+      margin: 3rem 0;
+    }
+  }
 }
