--- a/src/components/header/TopInfo.scss
+++ b/src/components/header/TopInfo.scss
@@ -1,8 +1,8 @@
 .top {
-  background-color: #c33c00;
+  background-color: var(--ter);
   color: white;
   text-align: center;
-  height: 3rem;
+  height: 2.7rem;
   position: absolute;
   top: 0;
   left: 0;
