--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 :root {
   // colours
   --pri: #419cd5;
-  --sec: #125496;
-  --ter: #c33c00;
+  --sec: #084480;
+  --ter: #d01010;
   --light: #edf4f8;
   --dark: #282d33;
 
