--- a/src/components/latest/Latest.module.scss
+++ b/src/components/latest/Latest.module.scss
@@ -1,5 +1,31 @@
 .latest {
-  width: 100vw;
-  height: 56rem;
   background-color: var(--light);
+  display: flex;
+  position: relative;
+
+  &__content {
+    display: flex;
+    align-items: center;
+    height: 56rem;
+  }
+
+  &__tb {
+    display: flex;
+    flex-direction: column;
+    height: 13rem;
+    justify-content: space-between;
+  }
+
+  &__heading {
+    color: var(--sec);
+  }
+
+  &__slider {
+    height: 100%;
+    background-color: var(--sec);
+    width: 76rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
