--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,10 @@ html {
 
 body {
   background-color: var(--dark);
+  line-height: 1.35;
   font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--dark);
   font-family: 'poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -24,4 +27,12 @@ body {
 .container {
   width: 90%;
   margin: 0 auto;
+}
+
+h1 {
+  font-size: 2.8rem;
+}
+
+h2 {
+  font-size: 2.2rem;
 }
