--- a/src/components/allBooksCta/AllBooksCta.module.scss
+++ b/src/components/allBooksCta/AllBooksCta.module.scss
@@ -9,6 +9,9 @@
 
   &__content {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     & p {
       padding-bottom: 2rem;
