--- a/src/components/latest/Latest.module.scss
+++ b/src/components/latest/Latest.module.scss
@@ -1,19 +1,21 @@
 .latest {
   background-color: var(--light);
-  display: flex;
-  position: relative;
 
   &__content {
     display: flex;
     align-items: center;
-    height: 56rem;
+    max-width: 100vw;
   }
 
   &__tb {
     display: flex;
     flex-direction: column;
-    height: 13rem;
     justify-content: space-between;
+    padding-right: 2rem;
+
+    & p {
+      padding: 2rem 0;
+    }
   }
 
   &__heading {
@@ -23,9 +25,28 @@
   &__slider {
     height: 100%;
     background-color: var(--sec);
-    width: 76rem;
     display: flex;
+    width: 100%;
     align-items: center;
-    justify-content: center;
+    color: var(--light);
+    padding: 4rem 0;
+    overflow: hidden;
+
+    &--container {
+      width: 40rem;
+      overflow: hidden;
+    }
+
+    &--slides {
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
+
+    &--slide {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
